# AtomicHabits

./: .env.docker.sample  .env.sample  Dockerfile  README.md  coverage_report.txt  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_options_alter_interval_options_and_more.py  0004_schedule_last_event.py  0005_remove_schedule_last_event.py  0006_alter_interval_is_active.py  0007_remove_interval_is_active.py  0008_schedule_last_event.py
habits/tests/: tests_models.py  tests_services.py  tests_views.py
telegram-bot/: telegram_bot.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_user_telegram_user_id_alter_user_telegram_username.py
